# SDLEngine

./: .gitignore  CMakeLists.txt  main.cpp
src/: Color.cpp  Color.h  Debug.cpp  Debug.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  GraphicsSystem.cpp  GraphicsSystem.h  MemoryTracker.cpp  MemoryTracker.h  SoundManager.cpp  SoundManager.h  Sprite.cpp  Sprite.h  Timer.cpp  Timer.h  Tracked.cpp  Tracked.h  Vector2.cpp  Vector2.h
